[gd_scene load_steps=27 format=2]

[ext_resource path="res://data/Resources/Sprites/Background/background.png" type="Texture" id=1]
[ext_resource path="res://data/Resources/Sprites/asteroids/meteoro G1 40x40.png" type="Texture" id=2]
[ext_resource path="res://data/Resources/Sprites/asteroids/meteoro p1 10x10.png" type="Texture" id=3]
[ext_resource path="res://data/Resources/Animations/ScenesBackgroundMenu.anim" type="Animation" id=4]
[ext_resource path="res://data/Scripts/Menu/Menu_controller_animation.gd" type="Script" id=5]
[ext_resource path="res://data/Resources/Sprites/UI/PLAY 30x10.png" type="Texture" id=6]
[ext_resource path="res://data/Resources/Sprites/UI/PLAY Hover 30x10.png" type="Texture" id=7]
[ext_resource path="res://data/Scripts/MenuController.gd" type="Script" id=8]
[ext_resource path="res://data/Resources/Sprites/asteroids/meteoro m2 20x20.png" type="Texture" id=9]
[ext_resource path="res://data/Resources/Sprites/asteroids/meteoro G2 40x40.png" type="Texture" id=10]
[ext_resource path="res://data/Resources/Sprites/asteroids/meteoro m1 20x20.png" type="Texture" id=11]
[ext_resource path="res://data/Resources/Sprites/Ship/bullet 6x6.png" type="Texture" id=12]
[ext_resource path="res://data/Resources/Sprites/UI/som on 20x20.png" type="Texture" id=13]
[ext_resource path="res://data/Resources/Sprites/UI/som off 20x20.png" type="Texture" id=14]
[ext_resource path="res://data/Resources/Fonts/pixel_unicode/Pixel-UniCode.ttf" type="DynamicFontData" id=15]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("animations_objects/big_asteroid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 115, -112 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animations_objects/big_asteroid:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("animations_objects/small_asteroid:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -111, -47 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("animations_objects/small_asteroid:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -65.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("animations_objects/MeteoroM220X20:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -127 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("animations_objects/MeteoroM220X20:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("animations_objects/MeteoroM120X20:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, -124 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("animations_objects/MeteoroM120X20:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("animations_objects/MeteoroG240X40:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -127 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("animations_objects/MeteoroG240X40:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("animations_objects/MeteoroG240X40:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("animations_objects/Bullet6X6:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -37 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("animations_objects/Bullet6X6:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 72.7 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("animations_objects/Bullet6X6:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=11]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=13]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 15 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.183432, 1 )
colors = PoolColorArray( 0.0606061, 0.0606061, 0.0606061, 1, 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 4 )

[sub_resource type="Environment" id=5]
resource_local_to_scene = true
background_mode = 4
glow_enabled = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 1.0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_color_correction = SubResource( 3 )

[sub_resource type="Animation" id=14]
resource_name = "Credits_scroll"
length = 23.0
tracks/0/type = "value"
tracks/0/path = NodePath("UI_credits:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI_credits:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI_credits:margin_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI_credits:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -101, -100 ), Vector2( -101, -466 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UI_credits/credits_content_layer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI_credits:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 22.1, 23 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI_credits:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -101.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI_credits:margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -100.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI_credits:margin_bottom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -100.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI_credits:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -101, -100 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UI_credits/credits_content_layer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI_credits:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -51.0
margin_top = -34.0
margin_right = -51.0
margin_bottom = -34.0
script = ExtResource( 8 )

[node name="AnimationComponents" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="AnimationComponents"]
self_modulate = Color( 1.5, 1.5, 1.5, 1 )
texture = ExtResource( 1 )

[node name="animations_objects" type="Node2D" parent="AnimationComponents"]

[node name="big_asteroid" type="Sprite" parent="AnimationComponents/animations_objects"]
position = Vector2( 115, -112 )
texture = ExtResource( 2 )

[node name="MeteoroM220X20" type="Sprite" parent="AnimationComponents/animations_objects"]
position = Vector2( 1, -127 )
texture = ExtResource( 9 )

[node name="MeteoroM120X20" type="Sprite" parent="AnimationComponents/animations_objects"]
position = Vector2( 8, -124 )
texture = ExtResource( 11 )

[node name="MeteoroG240X40" type="Sprite" parent="AnimationComponents/animations_objects"]
visible = false
position = Vector2( 3, -127 )
texture = ExtResource( 10 )

[node name="Bullet6X6" type="Sprite" parent="AnimationComponents/animations_objects"]
visible = false
position = Vector2( -16, -37 )
rotation = 1.26885
texture = ExtResource( 12 )

[node name="small_asteroid" type="Sprite" parent="AnimationComponents/animations_objects"]
position = Vector2( -111, -47 )
rotation = -1.14319
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="AnimationComponents"]
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimationComponents"]
anims/BackgroundMenu = ExtResource( 4 )
anims/RESET = SubResource( 2 )

[node name="UI_main_menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="UI_main_menu"]
margin_left = -30.0
margin_top = -11.0
margin_right = 30.0
margin_bottom = 9.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="SoundButton" type="TextureButton" parent="UI_main_menu"]
margin_left = -98.0
margin_top = -98.0
margin_right = -78.0
margin_bottom = -78.0
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )

[node name="Score_board" type="RichTextLabel" parent="UI_main_menu"]
margin_left = -98.0
margin_top = 16.0
margin_right = 98.0
margin_bottom = 59.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]BEST SCORE : 0
[center]last score : 
"
text = "BEST SCORE : 0
last score : 
"
scroll_active = false

[node name="Credits_button" type="TextureButton" parent="UI_main_menu"]
margin_left = -96.0
margin_top = 81.0
margin_right = -50.0
margin_bottom = 97.0

[node name="Label" type="Label" parent="UI_main_menu/Credits_button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Credits"
align = 1
valign = 1

[node name="UI_credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -100.0
margin_right = -101.0
margin_bottom = -100.0

[node name="credits_content_layer" type="RichTextLabel" parent="UI_credits"]
margin_left = 14.0
margin_top = 205.0
margin_right = 196.0
margin_bottom = 478.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[center][color=yellow]Game Director/Programmer[/color]
[center] Guilherme Filheiro
[center][color=yellow]2D Main Artist[/color]
[center] Gabriel Alves
[center][color=yellow] Music[/color]
[center] Arthur Martini
[center][color=yellow]Sounds[/color]
[center] Guilherme Filheiro





[center][color=red]Have Fun[/color]
"
text = "Game Director/Programmer
 Guilherme Filheiro
2D Main Artist
 Gabriel Alves
 Music
 Arthur Martini
Sounds
 Guilherme Filheiro





Have Fun
"
scroll_active = false

[node name="Credits_label" type="RichTextLabel" parent="UI_credits"]
margin_left = 3.0
margin_top = 13.0
margin_right = 199.0
margin_bottom = 53.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "[center][color=yellow]Credits[/color]"
text = "Credits"

[node name="Team_Name" type="RichTextLabel" parent="UI_credits"]
margin_top = 92.0
margin_right = 200.0
margin_bottom = 116.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "[center] [color=aqua]Delicious Dessert Studio[/color]"
text = " Delicious Dessert Studio"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Credits_player" type="AnimationPlayer" parent="."]
anims/Credits_scroll = SubResource( 14 )
anims/RESET = SubResource( 15 )

[connection signal="button_up" from="UI_main_menu/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="pressed" from="UI_main_menu/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="button_down" from="UI_main_menu/Credits_button" to="." method="_on_Credits_button_button_down"]
[connection signal="mouse_entered" from="UI_main_menu/Credits_button" to="." method="_on_Credits_button_mouse_entered"]
[connection signal="mouse_exited" from="UI_main_menu/Credits_button" to="." method="_on_Credits_button_mouse_exited"]
